samples/gateway-api/host-based/logging/opensearch_httproute.yaml
# Sample: gateway-api/host-based Version: 0.1.0


# This sample does NOT make the OpenSearch API endpoint accessible
# by default because there are limited use-cases for which this
# would be required.  However, if needed, you can make the
# OpenSearch API accessible by creating an HTTPRoute resource for
# it using this sample file.

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: v4m-search
spec:
  parentRefs:
    - name: v4m-gateway
      sectionName: https
  hostnames:
    - search.host.cluster.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: v4m-search
          port: 9200
